add some changes

--- a/homepage.html
+++ b/homepage.html
@@ -45,21 +45,21 @@
         <h1 id="guide">things to explore</h1>
         <tr>
             <th>Place</th>
-            <th>things to explore</th>
+            <th>things to explore here</th>
             <th>via</th>
         </tr>
         <tr>
-            <td>bandai city</td>
+            <td>bandai city center</td>
             <td>shopping street</td>
             <td>10min walk from niigata station</td>
         </tr>
         <tr>
-            <th>furumachi</th>
+            <th>furumachi walking area</th>
             <th>old shope and cafe</th>
             <th>take a bus from niigata station</th>
         </tr>
         <tr>
-            <th>pia bandai</th>
+            <th>pia bandai shopping area</th>
             <th>fish market</th>
             <th>bus from niigata station</th>
         </tr>
